--- a/FreeCodeCamp/index.html
+++ b/FreeCodeCamp/index.html
@@ -55,8 +55,21 @@
             console.log(a);
             console.log(b);
             console.log(c);
-            
         </p>
+        <h1>
+            Compound Assignment With Augmented Division
+        </h1>
+        <p>
+            The /= operator divides a variable by another number.
+            myVar = myVar / 5;
+            This can be rewritten as:
+            myVar /= 5;
+
+            Exercise:
+
+            Convert the assignments for a, b, and c to use the /= operator. 
+        </p>
+
 </body>
 <script src="./main.js" defer></script>
 </html>
