--- a/Cajero Automático/login.html
+++ b/Cajero Automático/login.html
@@ -11,8 +11,15 @@
 </head>
 <body>
     <div>
-        <img id="logoBancolombia" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSodpZSb8PaARIqnnORIT5RoOVU9fEpAgk0boezEmMGC0GB0DrYDlqgSYQgVZVb2UxCKqU&usqp=CAU" alt="logo bancolombia">
-    </div>
+        <div class="logo">
+            <img class="logoBancolombia" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSodpZSb8PaARIqnnORIT5RoOVU9fEpAgk0boezEmMGC0GB0DrYDlqgSYQgVZVb2UxCKqU&usqp=CAU" alt="logo bancolombia">   
+        <div class="textoSucursalVirtualPersonas">
+                <p>Sucursal Virtual Personas</p>
+        </div>
+    </div>    
+    <div class="inicioDeSeccion">
+            <p>Inicio de Sección</p>
+        </div>
     <main>
         <form id="formularioUsuario">
             <input id="userId" placeholder="User ID" for="email" type="email" name="email" autocomplete="off"/>
