--- a/My CV/CV.html
+++ b/My CV/CV.html
@@ -20,14 +20,13 @@
     <nav>
     <h1>My Cv</h1>
     <span><p><a target="_blank" href="https://www.linkedin.com/in/josedeveloperfullstack/">My linkedin</a>.</p>
-    <a href="https://www.linkedin.com/in/josedeveloperfullstack/"></span>
+    <a href="https://www.linkedin.com/in/josedeveloperfullstack/"></span></a>
     </nav>
         <main>
             <section>
-                <img class="picture" src="https://media-exp1.licdn.com/dms/image/C5603AQGPvsHQGbXAgg/profile-displayphoto-shrink_800_800/0/1653559236349?e=1671062400&v=beta&t=mISPUPrEBYBIu6spx61ZQI347K7PfX2LqwR7U04WZ88" alt="My Cv">.</a>
-                <div>
-                    <h2 id="name">Jose Alfredo Aguado Mesa</h2> 
-                </div>    
+                <img class="picture" src="https://media-exp1.licdn.com/dms/image/C5603AQGPvsHQGbXAgg/profile-displayphoto-shrink_800_800/0/1653559236349?e=1671062400&v=beta&t=mISPUPrEBYBIu6spx61ZQI347K7PfX2LqwR7U04WZ88" alt="My Cv">
+                <h2 id="name">Jose Alfredo Aguado Mesa</h2>  
+                <botton>orange</botton>
             </section>
             <div>
                 <h2 id="Aboutme"> About Me</h2>
